jumpy issue is still there
but projects sort correctly now

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,5 +1,11 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+.filter {
+  transition: none !important;
+}
+html {
+  scroll-behavior: auto !important; /* Disable smooth scrolling */
+}
 /*------------------------------header related section------------------------------*/
 .brandlogo {
   width: 135px;
@@ -78,7 +84,9 @@ body {
   overflow-x: hidden;
   font-size: 1.5rem;
   font-family: "Open Sans", sans-serif;
-  background: #ffead7; }
+  background: #ffead7;
+  overflow-anchor: none;
+}
 
 p {
   margin: 1em; }
